--- a/js/index.html
+++ b/js/index.html
@@ -58,6 +58,19 @@
   <div id="container"></div>
   <script>
     (function() {
+      // Unicode를 지원하는 Base64 인코딩 함수
+      function base64EncodeUnicode(str) {
+        return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g, function(match, p1) {
+          return String.fromCharCode('0x' + p1);
+        }));
+      }
+      // Unicode를 지원하는 Base64 디코딩 함수
+      function base64DecodeUnicode(str) {
+        return decodeURIComponent(Array.prototype.map.call(atob(str), function(c) {
+          return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+        }).join(''));
+      }
+      
       var container = document.getElementById('container');
       var search = window.location.search;
       // URL이 "?=" 로 시작하면 base64로 인코딩된 자바스크립트 코드가 전달된 것으로 간주
@@ -65,7 +78,7 @@
         var encodedCode = search.substring(2);
         var decodedCode;
         try {
-          decodedCode = atob(encodedCode);
+          decodedCode = base64DecodeUnicode(encodedCode);
         } catch (e) {
           decodedCode = 'Base64 디코딩 중 오류 발생: ' + e;
         }
@@ -95,7 +108,7 @@
           var code = textarea.value;
           var encoded;
           try {
-            encoded = btoa(code);
+            encoded = base64EncodeUnicode(code);
           } catch (e) {
             alert('코드 인코딩 중 오류가 발생했습니다: ' + e);
             return;
