--- a/c/index.html
+++ b/c/index.html
@@ -54,6 +54,20 @@
 <body>
   <div id="app"></div>
   <script>
+    // Unicode를 지원하는 Base64 인코딩 함수 (한글, 영어 등 모든 문자 지원)
+    function base64EncodeUnicode(str) {
+      return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g, function(match, p1) {
+        return String.fromCharCode(parseInt(p1, 16));
+      }));
+    }
+
+    // Unicode를 지원하는 Base64 디코딩 함수 (한글, 영어 등 모든 문자 지원)
+    function base64DecodeUnicode(str) {
+      return decodeURIComponent(atob(str).split('').map(function(c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+    }
+
     document.addEventListener("DOMContentLoaded", function() {
       const app = document.getElementById("app");
       const query = window.location.search;
@@ -63,7 +77,7 @@
         const encodedCode = query.substring(2);
         let decodedCode = "";
         try {
-          decodedCode = atob(encodedCode);
+          decodedCode = base64DecodeUnicode(encodedCode);
         } catch (e) {
           decodedCode = "오류: 올바르지 않은 base64 인코딩 문자열입니다.";
         }
@@ -87,7 +101,7 @@
           const code = textarea.value;
           let encoded = "";
           try {
-            encoded = btoa(code);
+            encoded = base64EncodeUnicode(code);
           } catch(e) {
             alert("인코딩 오류: 코드에 ASCII 이외의 문자가 포함되어 있을 수 있습니다.");
             return;
