--- a/c/index.html
+++ b/c/index.html
@@ -99,13 +99,8 @@
         button.textContent = "실행";
         button.addEventListener("click", function() {
           const code = textarea.value;
-          let encoded = "";
-          try {
-            encoded = base64EncodeUnicode(code);
-          } catch(e) {
-            alert("인코딩 오류: 코드에 ASCII 이외의 문자가 포함되어 있을 수 있습니다.");
-            return;
-          }
+          // Unicode 인코딩 함수를 사용하여 모든 문자가 올바르게 base64로 인코딩됩니다.
+          const encoded = base64EncodeUnicode(code);
           // 현재 URL에 base64 인코딩된 코드를 추가하여 이동
           const newUrl = window.location.origin + window.location.pathname + "?=" + encoded;
           window.location.href = newUrl;
