--- a/c++/index.html
+++ b/c++/index.html
@@ -81,12 +81,17 @@
           },
           body: JSON.stringify({
             language: "cpp",
-            version: "17",
+            version: "11.2.0", // API에서 허용하는 유효한 C++ 버전 번호로 변경
             files: [{
               name: "main.cpp",
               content: code
             }],
-            stdin: ""
+            stdin: "",
+            args: [],
+            compile_timeout: 10000,
+            run_timeout: 3000,
+            compile_memory_limit: -1,
+            run_memory_limit: -1
           })
         })
         .then(function(response) {
@@ -124,7 +129,7 @@
         form.onsubmit = function(event) {
           event.preventDefault();
           var code = document.getElementById("codeInput").value;
-          if (code.trim() === "") return;
+          if(code.trim() === "") return;
           var encoded;
           try {
             encoded = base64EncodeUnicode(code);
@@ -132,7 +137,7 @@
             alert("인코딩 중 에러가 발생했습니다: " + e);
             return;
           }
-          // 현재 URL의 도메인과 경로를 그대로 두고 쿼리스트링에 ?=base64코드를 추가
+          // 현재 URL의 도메인과 경로는 그대로 두고 쿼리스트링에 ?=base64코드를 추가
           window.location.href = window.location.origin + window.location.pathname + "?=" + encodeURIComponent(encoded);
         };
         
