--- a/c++/index.html
+++ b/c++/index.html
@@ -3,98 +3,153 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>C++ Code Viewer</title>
+  <title>C++ Code Executor</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-    }
-    /* 코드 전체를 보여줄 영역 */
-    #codeContainer {
-      display: block;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: #272822;
-      color: #f8f8f2;
       font-family: Consolas, "Courier New", monospace;
-      white-space: pre;
-      padding: 20px;
-      box-sizing: border-box;
     }
-    /* 코드 입력창 영역 */
+    /* Editor 모드 (코드 입력) */
     #editorContainer {
       display: flex;
       flex-direction: column;
       height: 100%;
+      padding: 20px;
+      box-sizing: border-box;
     }
     #codeInput {
       flex: 1;
       width: 100%;
-      box-sizing: border-box;
-      font-family: Consolas, "Courier New", monospace;
       font-size: 14px;
       padding: 10px;
-      border: none;
-      outline: none;
+      box-sizing: border-box;
+      resize: none;
     }
     #executeButton {
+      margin-top: 10px;
       padding: 10px;
       font-size: 16px;
       border: none;
-      cursor: pointer;
       background-color: #007BFF;
-      color: white;
+      color: #fff;
+      cursor: pointer;
+    }
+    /* Viewer/Executor 모드 (코드 표시 및 실행 결과) */
+    #viewerContainer {
+      display: none;
+      flex-direction: column;
+      height: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+    #codeSection, #outputSection {
+      flex: 1;
+      overflow: auto;
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      white-space: pre-wrap;
+      word-break: break-all;
+    }
+    #codeSection {
+      background-color: #f0f0f0;
+    }
+    #outputSection {
+      background-color: #272822;
+      color: #f8f8f2;
+    }
+    #runButton {
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      background-color: #28a745;
+      color: #fff;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <!-- 코드 입력창 (쿼리스트링이 없을 경우에 보임) -->
-  <div id="editorContainer" style="display: none;">
+  <!-- 코드 입력 모드: URL에 base64 인코딩된 코드가 없을 경우 -->
+  <div id="editorContainer">
     <textarea id="codeInput" placeholder="여기에 C++ 코드를 입력하세요..."></textarea>
     <button id="executeButton">실행</button>
   </div>
-  
-  <!-- base64 인코딩된 코드를 디코딩하여 보여줄 영역 -->
-  <div id="codeContainer" style="display: none;"></div>
+
+  <!-- 코드 뷰어 및 실행 모드: URL에 base64 인코딩된 코드가 있을 경우 -->
+  <div id="viewerContainer">
+    <h2>C++ 코드</h2>
+    <div id="codeSection"></div>
+    <button id="runButton">실행</button>
+    <h2>실행 결과</h2>
+    <div id="outputSection"></div>
+  </div>
 
   <script>
-    // Unicode 지원을 위한 base64 인코딩 함수
+    // Unicode 지원 Base64 인코딩/디코딩 함수
     function encodeBase64(str) {
       return btoa(unescape(encodeURIComponent(str)));
     }
-    // Unicode 지원을 위한 base64 디코딩 함수
     function decodeBase64(str) {
       return decodeURIComponent(escape(atob(str)));
     }
 
+    // C++ 코드 실행 함수 (Coliru API 사용)
+    function runCode(code) {
+      var outputSection = document.getElementById("outputSection");
+      outputSection.textContent = "실행 중...";
+      fetch("https://coliru.stacked-crooked.com/compile", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          cmd: "g++ -std=c++17 -O2 -Wall -pedantic main.cpp && ./a.out",
+          src: code
+        })
+      })
+      .then(function(response) {
+        return response.text();
+      })
+      .then(function(result) {
+        outputSection.textContent = result;
+      })
+      .catch(function(error) {
+        outputSection.textContent = "코드 실행 중 오류 발생: " + error;
+      });
+    }
+
     window.onload = function() {
       var search = window.location.search;
-      // URL이 "?="로 시작하고 ?= 뒤에 내용이 있을 경우
+      // URL이 "?="로 시작하며 그 뒤에 내용이 있으면 Viewer/Executor 모드
       if (search.indexOf("?=") === 0 && search.length > 2) {
-        // "?=" 이후의 base64 인코딩된 문자열 추출
         var encodedPart = search.substring(2);
-        // URL 디코딩 (만약 자동으로 인코딩되었을 경우 대비)
         encodedPart = decodeURIComponent(encodedPart);
         var decodedCode;
         try {
           decodedCode = decodeBase64(encodedPart);
         } catch (e) {
-          decodedCode = "base64 디코딩 중 오류가 발생했습니다.";
+          decodedCode = "// base64 디코딩 오류: " + e;
         }
-        var codeContainer = document.getElementById("codeContainer");
-        codeContainer.style.display = "block";
-        // textContent를 사용하여 HTML 태그로 인한 위험 차단 및 포매팅 유지
-        codeContainer.textContent = decodedCode;
+        // Editor 영역은 숨기고 Viewer 영역 표시
+        document.getElementById("editorContainer").style.display = "none";
+        document.getElementById("viewerContainer").style.display = "flex";
+        document.getElementById("codeSection").textContent = decodedCode;
+        // 자동으로 코드 실행
+        runCode(decodedCode);
+        // 실행 버튼을 통한 재실행 기능 추가
+        document.getElementById("runButton").addEventListener("click", function() {
+          runCode(decodedCode);
+        });
       } else {
-        // URL에 base64 코드가 없으면 코드 입력창을 보여줌
-        var editorContainer = document.getElementById("editorContainer");
-        editorContainer.style.display = "flex";
+        // URL에 코드가 없으면 Editor 모드 표시
+        document.getElementById("editorContainer").style.display = "flex";
+        document.getElementById("viewerContainer").style.display = "none";
         document.getElementById("executeButton").addEventListener("click", function() {
           var code = document.getElementById("codeInput").value;
           var encoded = encodeBase64(code);
-          // 인코딩된 문자열을 URL의 쿼리스트링으로 추가하여 이동
+          // base64 인코딩된 코드를 URL 쿼리스트링에 추가하여 페이지 이동
           window.location.href = window.location.origin + window.location.pathname + "?=" + encodeURIComponent(encoded);
         });
       }
