--- a/c++/index.html
+++ b/c++/index.html
@@ -11,7 +11,7 @@
       height: 100%;
       font-family: Consolas, "Courier New", monospace;
     }
-    /* Editor 모드 (코드 입력) */
+    /* 코드 편집기 (쿼리스트링이 없을 경우) */
     #editorContainer {
       display: flex;
       flex-direction: column;
@@ -36,93 +36,84 @@
       color: #fff;
       cursor: pointer;
     }
-    /* Viewer/Executor 모드 (코드 표시 및 실행 결과) */
-    #viewerContainer {
+    /* 터미널 (코드 실행 결과만 표시 - ?=base64 모드) */
+    #terminal {
       display: none;
-      flex-direction: column;
+      width: 100%;
       height: 100%;
       padding: 20px;
       box-sizing: border-box;
-    }
-    #codeSection, #outputSection {
-      flex: 1;
       overflow: auto;
-      margin-bottom: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      white-space: pre-wrap;
-      word-break: break-all;
-    }
-    #codeSection {
-      background-color: #f0f0f0;
-    }
-    #outputSection {
       background-color: #272822;
       color: #f8f8f2;
-    }
-    #runButton {
-      padding: 10px;
-      font-size: 16px;
-      border: none;
-      background-color: #28a745;
-      color: #fff;
-      cursor: pointer;
+      white-space: pre-wrap;
     }
   </style>
 </head>
 <body>
-  <!-- 코드 입력 모드: URL에 base64 인코딩된 코드가 없을 경우 -->
-  <div id="editorContainer">
+  <!-- 코드 편집기 (쿼리스트링이 없을 경우에만 보임) -->
+  <div id="editorContainer" style="display: none;">
     <textarea id="codeInput" placeholder="여기에 C++ 코드를 입력하세요..."></textarea>
     <button id="executeButton">실행</button>
   </div>
-
-  <!-- 코드 뷰어 및 실행 모드: URL에 base64 인코딩된 코드가 있을 경우 -->
-  <div id="viewerContainer">
-    <h2>C++ 코드</h2>
-    <div id="codeSection"></div>
-    <button id="runButton">실행</button>
-    <h2>실행 결과</h2>
-    <div id="outputSection"></div>
-  </div>
+  
+  <!-- 터미널: ?=base64 인코딩된 코드로 실행할 때만 보임 -->
+  <div id="terminal"></div>
 
   <script>
-    // Unicode 지원 Base64 인코딩/디코딩 함수
+    // Unicode 지원을 위한 Base64 인코딩/디코딩 함수
     function encodeBase64(str) {
       return btoa(unescape(encodeURIComponent(str)));
     }
     function decodeBase64(str) {
       return decodeURIComponent(escape(atob(str)));
     }
-
-    // C++ 코드 실행 함수 (Coliru API 사용)
-    function runCode(code) {
-      var outputSection = document.getElementById("outputSection");
-      outputSection.textContent = "실행 중...";
-      fetch("https://coliru.stacked-crooked.com/compile", {
+    
+    // C++ 코드를 실행하기 위한 Piston API 사용 함수
+    function runCodeWithPiston(code) {
+      var terminal = document.getElementById("terminal");
+      terminal.textContent = "코드 실행 중...\n";
+      fetch("https://emkc.org/api/v2/piston/execute", {
         method: "POST",
         headers: {
           "Content-Type": "application/json"
         },
         body: JSON.stringify({
-          cmd: "g++ -std=c++17 -O2 -Wall -pedantic main.cpp && ./a.out",
-          src: code
+          language: "cpp",
+          version: "latest",
+          files: [
+            {
+              name: "main.cpp",
+              content: code
+            }
+          ],
+          stdin: "",
+          args: []
         })
       })
       .then(function(response) {
-        return response.text();
+        return response.json();
       })
       .then(function(result) {
-        outputSection.textContent = result;
+        var output = "";
+        if (result.run) {
+          output += result.run.stdout;
+          if (result.run.stderr) {
+            output += "\n[stderr]:\n" + result.run.stderr;
+          }
+        } else {
+          output = "실행 결과를 가져올 수 없습니다.";
+        }
+        terminal.textContent = output;
       })
       .catch(function(error) {
-        outputSection.textContent = "코드 실행 중 오류 발생: " + error;
+        terminal.textContent = "코드 실행 중 오류 발생: " + error;
       });
     }
-
+    
     window.onload = function() {
       var search = window.location.search;
-      // URL이 "?="로 시작하며 그 뒤에 내용이 있으면 Viewer/Executor 모드
+      // ?=base64 인코딩된 코드가 URL에 있을 경우 (터미널 모드)
       if (search.indexOf("?=") === 0 && search.length > 2) {
         var encodedPart = search.substring(2);
         encodedPart = decodeURIComponent(encodedPart);
@@ -132,24 +123,15 @@
         } catch (e) {
           decodedCode = "// base64 디코딩 오류: " + e;
         }
-        // Editor 영역은 숨기고 Viewer 영역 표시
-        document.getElementById("editorContainer").style.display = "none";
-        document.getElementById("viewerContainer").style.display = "flex";
-        document.getElementById("codeSection").textContent = decodedCode;
-        // 자동으로 코드 실행
-        runCode(decodedCode);
-        // 실행 버튼을 통한 재실행 기능 추가
-        document.getElementById("runButton").addEventListener("click", function() {
-          runCode(decodedCode);
-        });
+        // 에디터와 실행 버튼은 보이지 않고 터미널만 표시
+        document.getElementById("terminal").style.display = "block";
+        runCodeWithPiston(decodedCode);
       } else {
-        // URL에 코드가 없으면 Editor 모드 표시
+        // 쿼리스트링이 없으면 코드 편집기 표시
         document.getElementById("editorContainer").style.display = "flex";
-        document.getElementById("viewerContainer").style.display = "none";
         document.getElementById("executeButton").addEventListener("click", function() {
           var code = document.getElementById("codeInput").value;
           var encoded = encodeBase64(code);
-          // base64 인코딩된 코드를 URL 쿼리스트링에 추가하여 페이지 이동
           window.location.href = window.location.origin + window.location.pathname + "?=" + encodeURIComponent(encoded);
         });
       }
