--- a/c++/index.html
+++ b/c++/index.html
@@ -92,13 +92,12 @@
     // 전역 변수들
     var code = "";
     var accumulatedInput = "";
-    var interactive = false; // 코드에 입력 명령어가 포함되어 있는지 여부
+    var currentOutput = "";
+    var interactive = false; // 코드에 입력 관련 명령어가 포함되어 있는지 여부
 
-    // wandbox API를 사용하여 C++ 코드를 실행하고, 전체 출력 결과를 받아 업데이트하는 함수
+    // wandbox API를 사용하여 C++ 코드를 실행하고, 누적된 stdin을 반영한 전체 출력 결과를 받아옴.
     function executeCode() {
       var terminalContainer = document.getElementById("terminalContainer");
-      // 실행 중이면 잠시 대기 (동시 실행 방지)
-      // wandbox API는 누적 stdin을 기반으로 전체 출력을 반환함
       fetch("https://wandbox.org/api/compile.json", {
         method: "POST",
         headers: {
@@ -133,32 +132,38 @@
         if (!output) {
           output = "실행 결과를 가져올 수 없습니다.";
         }
-        updateTerminal(output);
+        // 새로 출력된 부분만을 추가 (이전 출력(currentOutput)이 접두어일 경우)
+        var newPart = "";
+        if (output.indexOf(currentOutput) === 0) {
+          newPart = output.substring(currentOutput.length);
+        } else {
+          // 전체 내용이 달라졌으면 전체를 다시 표시
+          newPart = output;
+          currentOutput = "";
+          // 기존 터미널 내용은 그대로 유지 (사용자 출력은 쌓임)
+        }
+        currentOutput = output;
+        // 새로 출력된 부분을 라인별로 추가
+        newPart.split("\n").forEach(function(line) {
+          var lineDiv = document.createElement("div");
+          lineDiv.textContent = line;
+          terminalContainer.appendChild(lineDiv);
+        });
+        terminalContainer.scrollTop = terminalContainer.scrollHeight;
+        // 인터랙티브 모드라면 새 프롬프트를 추가
+        if (interactive) {
+          createPrompt();
+        }
       })
       .catch(function(error) {
-        updateTerminal("코드 실행 중 오류 발생: " + error);
+        var terminalContainer = document.getElementById("terminalContainer");
+        var errorDiv = document.createElement("div");
+        errorDiv.textContent = "코드 실행 중 오류 발생: " + error;
+        terminalContainer.appendChild(errorDiv);
       });
     }
 
-    // 터미널 전체를 업데이트하는 함수: 전체 출력 결과를 라인별로 표시하고, 프롬프트를 추가
-    function updateTerminal(fullOutput) {
-      var terminalContainer = document.getElementById("terminalContainer");
-      // 전체 내용을 <div> 라인 단위로 생성
-      terminalContainer.innerHTML = ""; // 기존 내용 제거
-      var lines = fullOutput.split("\n");
-      lines.forEach(function(line) {
-        var lineDiv = document.createElement("div");
-        lineDiv.textContent = line;
-        terminalContainer.appendChild(lineDiv);
-      });
-      terminalContainer.scrollTop = terminalContainer.scrollHeight;
-      // 인터랙티브 모드라면 프롬프트를 추가
-      if (interactive) {
-        createPrompt();
-      }
-    }
-
-    // 프롬프트 줄 생성: "(입력): " 레이블과 인라인 입력 필드를 추가
+    // 프롬프트 줄 생성: ">" 프롬프트와 인라인 입력 필드를 추가
     function createPrompt() {
       var terminalContainer = document.getElementById("terminalContainer");
       var promptLine = document.createElement("div");
@@ -166,13 +171,13 @@
 
       var promptLabel = document.createElement("span");
       promptLabel.className = "prompt-label";
-      promptLabel.textContent = "(입력):";
+      // "입력:" 대신 ">" 프롬프트로 표시
+      promptLabel.textContent = "> ";
       promptLine.appendChild(promptLabel);
 
       var inputField = document.createElement("input");
       inputField.type = "text";
       inputField.className = "prompt-input";
-      // 엔터 키 이벤트 처리: 입력 후 엔터를 누르면 처리
       inputField.addEventListener("keydown", function(e) {
         if (e.key === "Enter") {
           e.preventDefault();
@@ -186,18 +191,17 @@
       terminalContainer.scrollTop = terminalContainer.scrollHeight;
     }
 
-    // 사용자 입력 처리: 프롬프트 입력값을 터미널에 에코하고, 누적 입력에 추가 후 코드 실행
+    // 사용자 입력 처리: 프롬프트의 입력값을 에코하고 누적 입력에 추가 후 재실행 요청
     function processUserInput(userInput, promptLine) {
       if (userInput === "") return;
-      // 프롬프트 줄에서 입력 필드를 제거하고, 입력한 텍스트를 고정 텍스트로 변경
+      // 프롬프트 줄에서 입력 필드를 제거하고, 입력한 텍스트를 고정 텍스트로 대체
       promptLine.removeChild(promptLine.lastChild);
       var userText = document.createElement("span");
-      userText.textContent = " " + userInput;
+      userText.textContent = userInput;
       promptLine.appendChild(userText);
 
-      // 누적 입력에 추가 (각 입력 후 개행 포함)
+      // 누적 입력에 추가 (개행 포함)
       accumulatedInput += userInput + "\n";
-      // 실행 요청 (프로그램은 누적 stdin에 따라 전체 출력을 다시 반환)
       executeCode();
     }
 
@@ -213,9 +217,8 @@
           code = "// base64 디코딩 오류: " + e;
         }
         document.getElementById("terminalContainer").style.display = "block";
-        // 코드에 입력 관련 명령어가 포함되어 있는지 검사
+        // 인터랙티브 입력 관련 명령어가 있는지 검사 (std::cin, cin >>, scanf, gets, fgets 등)
         interactive = /std::cin|cin\s*>>|scanf|gets|fgets/i.test(code);
-        // 초기 실행 (아직 입력값 없음)
         executeCode();
       } else {
         // 편집기 모드
