--- a/lua/index.html
+++ b/lua/index.html
@@ -99,7 +99,17 @@
         // 디코딩된 Lua 코드 실행
         var status = lauxlib.luaL_dostring(L, decodedCode);
         if (status !== lua.LUA_OK) {
-          var errMsg = lua.lua_isstring(L, -1) ? lua.lua_tojsstring(L, -1) : "Unknown error";
+          var errMsg = "";
+          if (lua.lua_isstring(L, -1)) {
+            errMsg = lua.lua_tojsstring(L, -1);
+            lua.lua_pop(L, 1);
+          } else {
+            lua.lua_getglobal(L, "tostring");      // push tostring function
+            lua.lua_pushvalue(L, -2);              // push error object
+            lua.lua_call(L, 1, 1);                 // call tostring(error)
+            errMsg = lua.lua_isstring(L, -1) ? lua.lua_tojsstring(L, -1) : "Unknown error";
+            lua.lua_pop(L, 2); // pop both the result and the original error object
+          }
           output.textContent += "\nLua Error: " + errMsg;
         }
       } else {
