--- a/python/index.html
+++ b/python/index.html
@@ -65,8 +65,36 @@
 
     async function main() {
       let pyodide = await loadPyodide();
+
+      // Setup dummy modules to "support" libraries that are not natively supported in Pyodide.
+      await pyodide.runPythonAsync(`
+import sys
+import types
+
+# Dummy tkinter module
+if "tkinter" not in sys.modules:
+    tkinter = types.ModuleType("tkinter")
+    def dummy_Tk(*args, **kwargs):
+        print("Dummy tkinter.Tk created. (실제 tkinter는 Pyodide에서 지원되지 않습니다.)")
+        return object()
+    tkinter.Tk = dummy_Tk
+    tkinter.mainloop = lambda: print("Dummy tkinter.mainloop called. (실제 tkinter는 Pyodide에서 지원되지 않습니다.)")
+    sys.modules["tkinter"] = tkinter
+
+# Dummy flask module
+if "flask" not in sys.modules:
+    flask = types.ModuleType("flask")
+    class DummyFlask:
+        def __init__(self, *args, **kwargs):
+            print("Dummy Flask initialized. (실제 Flask는 Pyodide에서 지원되지 않습니다.)")
+        def run(self, *args, **kwargs):
+            print("Dummy Flask run. (실제 Flask는 Pyodide에서 지원되지 않습니다.)")
+    flask.Flask = DummyFlask
+    sys.modules["flask"] = flask
+      `);
+
       var query = window.location.search;
-      if(query.startsWith("?=") && query.length > 2) {
+      if (query.startsWith("?=") && query.length > 2) {
         var encoded = query.substring(2);
         var code;
         try {
@@ -99,14 +127,11 @@ sys.stdout = sys.stderr = JSWriter()
         try {
           // 입력된 Python 코드를 실행
           let result = await pyodide.runPythonAsync(code);
-          if(result !== undefined && result !== null) {
+          if (result !== undefined && result !== null) {
             writeOutput("\\n" + result.toString());
           }
         } catch(e) {
           let errorMsg = e.toString();
-          if(errorMsg.includes("No module named")) {
-            errorMsg += "\\nPyodide에서 지원되지 않는 라이브러리입니다.";
-          }
           writeOutput("\\nError: " + errorMsg);
         }
       } else {
@@ -117,7 +142,7 @@ sys.stdout = sys.stderr = JSWriter()
     // 코드 입력창과 실행 버튼을 표시하는 함수
     function displayInput() {
       var container = document.getElementById("container");
-      container.innerHTML = 
+      container.innerHTML =
         '<textarea id="codeInput" placeholder="여기에 Python 코드를 입력하세요"></textarea><br>' +
         '<button id="executeBtn">실행</button>';
       document.getElementById("executeBtn").addEventListener("click", function() {
